💅 | polish / small refinements

--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -2,4 +2,8 @@
 layout: ../layout.astro
 title: 404
 ---
+**404 — Page not found**
+
+The page you’re looking for doesn’t exist.
+
 You might want to head back [home](/cryptid/).
