--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -6,4 +6,4 @@ title: 404
 
 The page you’re looking for doesn’t exist.
 
-You might want to head back [home](/cryptid/).
+You might want to head back [home](../).
